# hackathon_starter_kit

./: .gitignore  README.md  demo_evaluation.ipynb  demo_inverse_problem.ipynb  pyproject.toml  setup.py
material/degradation_operators/: inpainting_middle.pt  outpainting_expand.pt  outpainting_half.pt  sr16.pt  sr4.pt
py_source/: local_paths.py  utils.py
py_source/configs/: diffusion_config.yaml  ffhq_model.yaml
py_source/evaluation/: gmm.py
py_source/guided_diffusion/: __init__.py  gaussian_diffusion.py  unet.py
py_source/sampling/: dps.py  epsilon_net.py  pgdm.py  repaint.py  unconditional.py
src/: utils.py
src/evaluation/: gmm.py  perception.py
src/guided_diffusion/: posterior_mean_variance.py
src/inverse_problem_with_diffusion_prior/: README.md  aggregate_gmm_table.py  eval_funnel.py  funnel_animation.py  funnel_mm.py  gmm.py  gmm_to_break_mcg_diff.py  image_inpainting.py  requirements.txt  run_hf.py
src/inverse_problem_with_diffusion_prior/configs/: config.yaml
src/inverse_problem_with_diffusion_prior/configs/ddrm/: colorization.yaml  default.yaml  outpainting.yaml
src/inverse_problem_with_diffusion_prior/flows/: rnvp.py  vi_test.py
src/inverse_problem_with_diffusion_prior/inp_masks/: half.npy  inv_square.npy  square.npy
src/inverse_problem_with_diffusion_prior/ipwdp/: diffusion.py  generative_models.py  image_utils.py  inverse_problems_utils.py  nn_utils.py  optimal_particle_filter.py  smc_diff.py  svd_replacement.py
src/sampling/: dps.py  epsilon_net.py  pgdm.py  repaint.py  unconditional.py
(+8 files in other folders)
