[build-system]
requires = ["setuptools>=65.5.0"]
build-backend = "setuptools.build_meta"


[project]
name = "py_source"
description = "Starter code for the Hackathon"
version = "0.0.0"
authors = [
    { name = "Yazid JANATI EL IDRISSI", email = "janati.yazid@gmail.com" },
    { name = "Badr MOUFAD", email = "badr-moufad@hotmail.com" },
]
dependencies = [
    "torch",
    "torchvision",
    "transformers",
    "diffusers[torch]",
    "lpips",
    "Pillow",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "tqdm",
    "omegaconf",
    "tqdm",
    "PyYAML",
]
